moved to a better place

--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.0",
+    "chai": "^3.5.0",
     "dojo": "^1.12.2",
+    "enzyme": "^2.9.1",
     "eslint": "^4.6.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.3.0",
+    "jsdom": "^11.2.0",
+    "mocha": "^3.5.3",
+    "mocha-snapshots": "^2.4.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-test-renderer": "^15.6.2",
+    "snap-shot": "^2.17.0",
     "webpack": "^3.5.5"
   },
   "devDependencies": {
