added the mocha script to npm scripts + general cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 *.bak
 *.launch
 *.tmp
-*.lock
+
+package-lock.json
 
 # Created by https://www.gitignore.io/api/sbt,scala,playframework,intellij+all
 
