--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "",
+  "private": true,
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -10,17 +11,14 @@
     "babel-preset-env": "^1.6.0",
     "chai": "^3.5.0",
     "dojo": "^1.12.2",
-    "enzyme": "^2.9.1",
     "eslint": "^4.6.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.3.0",
     "jsdom": "^11.2.0",
     "mocha": "^3.5.3",
-    "mocha-snapshots": "^2.4.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-test-renderer": "^15.6.2",
     "snap-shot": "^2.17.0",
     "webpack": "^3.5.5"
   },
@@ -33,9 +31,12 @@
   },
   "scripts": {
     "clean": "rm -rf build/* && rm -f widget.mpk",
+
     "prebuild": "npm run clean",
     "build": "webpack && node package.xml.js && cd build && zip -r widget.mpk *",
-    "postbuild": "cp build/widget.mpk mendix/widgets/"
+    "postbuild": "npm run verify && cp build/widget.mpk mendix/widgets/",
+
+    "verify": "mocha test/postBuild"
   },
   "author": "",
   "license": ""
